--- a/app/src/main/res/layout/fragment_control.xml
+++ b/app/src/main/res/layout/fragment_control.xml
@@ -14,6 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
+        <!-- TODO
         <Button
             android:id="@+id/updateFilterButton"
             android:layout_width="match_parent"
@@ -32,6 +33,7 @@
                 android:layout_height="wrap_content" />
 
         </android.support.design.widget.TextInputEditText>
+        -->
 
     </LinearLayout>
 
