--- a/app/src/main/res/layout/fragment_control.xml
+++ b/app/src/main/res/layout/fragment_control.xml
@@ -37,11 +37,11 @@
 
     </LinearLayout>
 
-    <TextureView
+    <TextView
         android:id='@+id/permissionDeniedTextView'
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:text="@string/control.permissionDenied" />
 
 </FrameLayout>
